Refactor Converters class